49. group anagramscopy for markdowncopy for markdown

--- a/markdown/49. group anagrams.md
+++ b/markdown/49. group anagrams.md
@@ -1,4 +1,4 @@
-### [49\. group anagramscopy for markdowncopy for markdown](https://leetcode.com/problems/group-anagrams/)
+### [49\. group anagrams](https://leetcode.com/problems/group-anagrams/)
 
 difficulty: **medium**
 
@@ -21,6 +21,7 @@ output:
 
 *   all inputs will be in lowercase.
 *   the order of your output does not matter.
+
 
 #### solution
 
