--- a/docs/markdown/0071. Simplify Path.md
+++ b/docs/markdown/0071. Simplify Path.md
@@ -66,7 +66,7 @@ class Solution {
         Deque<String> strings = new LinkedList<>(); // 使用双端队列
         for (String s : split) {
             if (!s.equals("") && !s.equals(".")) {
-                if (s.equals("..")) {
+                if (s.equals("src/main")) {
                     if (!strings.isEmpty()) {
                         strings.pop(); // 双端队列可以用作栈，返回上一层目录
                     }
